kubernetes/main/apps/miniflux/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rss
  namespace: miniflux
  annotations:
    external-dns.alpha.kubernetes.io/target: ip.nidr0x.win
spec:
  parentRefs:
    - name: external
      namespace: gateway
      sectionName: https-gateway
    - name: internal
      namespace: gateway
      sectionName: https-gateway
  hostnames:
    - "rss.nidr0x.win"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /miniflux
      backendRefs:
        - name: miniflux
          port: 8080
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: nextflux
          port: 3000
